service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  annotations:
    external-dns.alpha.kubernetes.io/hostname: uptime-kuma.sol.milkyway
  labels:
    app: uptime-kuma
spec:
  type: LoadBalancer
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
      name: http
  selector:
    app: uptime-kuma
